force-app/main/default/objects/HME_Deliverable__c/HME_Deliverable__c.object-meta.xml
<CustomObject>
    <label>HME Deliverable</label>
    <nameField>
        <label>HME Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HME Deliverable</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>