force-app/main/default/objects/HME_Deliverable__c/fields/HME_Collaboration_Action_Tracker__c.field-meta.xml
<CustomField>
    <fullName>HME_Collaboration_Action_Tracker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>HME Collaboration Action Tracker</label>
    <referenceTo>HME_Collaboration_Action_Tracker__c</referenceTo>
    <relationshipLabel>HME Deliverable</relationshipLabel>
    <relationshipName>HME_Deliverable</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>